--- a/froentend/package.json
+++ b/froentend/package.json
@@ -4,7 +4,7 @@
   "description": "amazone",
   "main": "index.js",
   "scripts": {
-    "start": "webpack-dev-server --watch-content-base --open",
+    "start": "index.html --open",
     "build": "webpack --mode=production --output ./main.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
